--- a/Game.html
+++ b/Game.html
@@ -8,7 +8,8 @@
 		<canvas id="main_canvas" width="0px" height="0px"></canvas>
 		<div id="main_view"></div>
 		<div id="1">
-			<input id="file_input" type="file">
+			<input id="file_input" type="file" accept="image/png, image/jpeg" value="">
+			<input id="background_color_input" type="color" value="black">Background Color</input>
 		</div>
 		<div id="2">
 			<input id="column_input" type="number" value="4">Columns</input>
@@ -25,6 +26,9 @@
 			<input id="outline_color_input" type="color" value="black">Outline Color</input>
 		</div>
 		<div id="5">
+			<input id="invert_controls_input" type="checkbox">Invert controls?</input>
+		</div>
+		<div id="6">
 			<button id="shuffle_button" type="button">Shuffle</button>
 		</div>
 		<script src="./functions.js"></script>
@@ -37,19 +41,19 @@
 			////////////////////////////////////////////////////////////////////////////////////////////////////
 			var manager_ = new manager(); //Object Manager
 			var image_; //image object
+			var backgroundColor_ = "black"; //background color, set behind the picture
 			var textureWidth_; //width of the texture, doesn't change
 			var textureHeight_; //height of the texture, doesn't change
 			var imageWidth_; //width of the image, after scaling
 			var imageHeight_; //height of the image, after scaling
 			var boxWidth_; //width of the individual image boxes (imageWidth_ / columns_)
 			var boxHeight_; //height of the individual image boxes (imageHeight_ / rows_)
-			var columns_ = 4;
-			var rows_ = 4;
-			var boxNum_ = 0;
-			var touchX_;
-			var touchY_;
-
-			var mobile_ = false;
+			var columns_ = 4; //number of columns (use with x axis calcs)
+			var rows_ = 4; //number of rows (use with y axis calcs)
+			var boxNum_ = 0; //total number of boxes
+			var touchX_; //for touch controlls - x
+			var touchY_; //for touch controlls - y
+			var mobile_ = false; //is the user on mobile?
 
 			////////////////////////////////////////////////////////////////////////////////////////////////////
 			///Init
@@ -57,8 +61,10 @@
 			window.onload = function ()
 			{
 				//Add all the event listeners
-				var fileInput = $("file_input");
-				fileInput.addEventListener('change', ReadImage);
+				var file_input = $("file_input");
+				file_input.addEventListener('change', ReadImage);
+				var background_color_input = $("background_color_input");
+            	background_color_input.addEventListener("change", BackgroundColorInput);
 
 				var column_input = $("column_input");
             	column_input.addEventListener("change", ColumnInput);
@@ -79,6 +85,8 @@
 				var outline_color_input = $("outline_color_input");
             	outline_color_input.addEventListener("change", OutlineColorInput);
 
+				var invert_controls_input = $("invert_controls_input");
+
 				var shuffle_button = $("shuffle_button");
             	shuffle_button.addEventListener("click", ShuffleButtonInput);
 
@@ -93,12 +101,11 @@
 				mobile_ = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
 				console.log(mobile_);
 
-				//Reset values - just a visual thing where values are still displayed but the actual value is empty
-				fileInput.value = "";
-				column_input.value = 4;
-				row_input.value = 4;
-				num_display_input.checked = false;
-				outline_display_input.checked = false;
+				//Reset values on refresh
+				if (file_input.value !== "") renderImage(file_input.files[0]);
+				columns_ = parseInt(column_input.value, 10);
+				rows_ = parseInt(row_input.value, 10);
+				backgroundColor_ = background_color_input.value;
 
 				//Start the main game loop
 				Main();
@@ -126,6 +133,11 @@
                 //when the file is read it triggers the onload event above.
                 reader.readAsDataURL(file);
             }
+
+			function BackgroundColorInput()
+			{
+				backgroundColor_ = background_color_input.value;
+			}
 
 			function ColumnInput()
             {
@@ -316,7 +328,7 @@
 
 			function Draw(ctx)
 			{
-				ctx.fillStyle = "#ff0000";
+				ctx.fillStyle = backgroundColor_;
 				ctx.fillRect(0, 0, imageWidth_, imageHeight_);
 
 				manager_.Draw(ctx);
@@ -329,19 +341,23 @@
 			{
 				if (inputEvent.key == "w" || inputEvent.key == "i")
 				{
-					Swap(0);
+					if (invert_controls_input.checked) Swap(2);
+					else Swap(0);
 				}
 				else if (inputEvent.key == "a" || inputEvent.key == "j")
 				{
-					Swap(1);
+					if (invert_controls_input.checked) Swap(3);
+					else Swap(1);
 				}
 				else if (inputEvent.key == "s" || inputEvent.key == "k")
 				{
-					Swap(2);
+					if (invert_controls_input.checked) Swap(0);
+					else Swap(2);
 				}
 				else if (inputEvent.key == "d" || inputEvent.key == "l")
 				{
-					Swap(3);
+					if (invert_controls_input.checked) Swap(1);
+					else Swap(3);
 				}
 
 				if (CheckWinCondition() && boxNum_ > 0) manager_.SearchByID(boxNum_).Display(true);
@@ -371,13 +387,29 @@
 
 				if (Math.abs(distanceX) >= Math.abs(distanceY))
 				{
-					if (distanceX >= 0) Swap(1);//move left
-					else Swap(3);//moved right
+					if (distanceX >= 0) 
+					{//move left
+						if (invert_controls_input.checked) Swap(3);
+						else Swap(1);
+					}
+					else 
+					{//moved right
+						if (invert_controls_input.checked) Swap(1);
+						else Swap(3);
+					}
 				}
 				else
 				{
-					if (distanceY >= 0) Swap(0);//move up
-					else Swap(2);//moved down
+					if (distanceY >= 0) 
+					{//move up
+						if (invert_controls_input.checked) Swap(2);
+						else Swap(0);
+					}
+					else 
+					{//moved down
+						if (invert_controls_input.checked) Swap(0);
+						else Swap(2);
+					}
 				}
 
 				if (CheckWinCondition() && boxNum_ > 0) manager_.SearchByID(boxNum_).Display(true);
